--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,3 @@
 {
-    "babel": {
-      "plugins": ["@babel/plugin-proposal-private-property-in-object"]
-    }
-  }
-  
+  "presets": ["@babel/preset-env", "@babel/preset-react"]
+}
